# Apollo

./: .clang-format  CMakeLists.txt  LICENSE  README.md
lib/am335x_sdk/: readme.md
lib/am335x_sdk/ti/board/: .xdcenv.mak  Settings.h  Settings.xdc  Settings.xdc.xdt  board.h  board_cfg.h  board_component.mk  config.bld  config_mk.bld  makefile  package.bld  package.mak  package.xdc  package.xs  utils.xs
lib/am335x_sdk/ti/board/diag/: board_diag_component.mk  create_sd.bat  create_sd.sh  create_spi.bat  create_spi.sh  makefile
lib/am335x_sdk/ti/csl/: COPYING.txt  Settings.h  Settings.xdc  Settings.xdc.xdt  config.bld  config_mk.bld  csl.h  csl2_mainpage.h  csl_a15.h  csl_adc.h  csl_aif2.h  csl_armGic.h  csl_armGicAux.h  csl_bootcfg.h  csl_bootcfgAux.h  csl_bwmngmt.h  csl_bwmngmtAux.h  csl_cache.h  csl_cacheAux.h  csl_cbass.h  csl_cgem.h  csl_cgemAux.h  csl_chip.h  csl_chipAux.h  csl_clec.h  csl_component.mk  csl_cpIntc.h  csl_cpIntcAux.h  csl_cpgmac_sl.h  csl_cpgmac_slAux.h  csl_cppi.h  csl_cpsgmii.h  csl_cpsgmiiAux.h  csl_cpsgmii_def.h  csl_cpsw.h  csl_cpswAux.h  csl_cpsw_ssAux.h  csl_cpsw_ss_s.h  csl_cpswitch.h  csl_cpts.h  (+395 more)
lib/am335x_sdk/ti/osal/: CacheP.h  CycleprofilerP.h  EventCombinerP.h  EventP.h  HwiP.h  MemoryP.h  MuxIntcP.h  Queue.h  RegisterIntr.h  SemaphoreP.h  Settings.h  Settings.xdc  Settings.xdc.xdt  SwiP.h  TaskP.h  TimerP.h  config.bld  config_mk.bld  makefile  osal.h  osal_component.mk  osalver.h  osalver.h.xdt  package.bld  package.xdc  package.xs
lib/am335x_sdk/ti/starterware/: Makefile  Rules.make
lib/sitara_device_support_1.5.1/emulation/gel/: AM335x_PRU_ICSS_local.gel  AM335x_trace_dapdebugss.gel
src/: CMakeLists.txt  reg_accesor.hpp
src/boot/: CMakeLists.txt
src/boot/bootloader/: CMakeLists.txt  bl_main.cpp
src/boot/mlo/: CMakeLists.txt  boot_am335x.s  boot_entry.cpp  boot_handlers.cpp  boot_linker_refs.hpp  boot_mlo.cpp  mlo_ocm_ram.ld  stack_guard.cpp
src/cfg/freertos/: CMakeLists.txt  freertos_hooks_prj.cpp
src/mem/: CMakeLists.txt  mem_map.hpp
src/prcm/: reg_cm_cefuse.hpp  reg_cm_device.hpp  reg_cm_dpll.hpp  reg_cm_gfx.hpp  reg_cm_mpu.hpp  reg_cm_per.hpp  reg_cm_rtc.hpp  reg_cm_wkup.hpp
src/prcm/clk_mod_reg/: reg_cm_per.hpp
tools/openocd/: cpu_init.tcl
tools/openocd/board/: beaglebone_black_mlo.cfg
tools/scripts/register_generator/: cpp_template.py  parser.py  reg_cm_per.hpp  templates.py
(+11574 files in other folders)
